# crownfall

./: .gitignore  Cargo.toml  README.md  railpack.json
.github/workflows/: main.bak  main.yml
client/: Cargo.toml
client/resources/: arrow_black.ici  arrow_white.ici  cell_valid.ici  crown_black.ici  crown_white.ici  knight_black.ici  knight_white.ici  spy_black.ici  spy_white.ici  sqr_dark.ici  sqr_light.ici  title_left.ici  title_right.ici
client/src/: ai_game.rs  ai_settings_scene.rs  create_game.rs  game.rs  game_list_scene.rs  game_renderer.rs  join_game.rs  joining.rs  login.rs  main.rs  net.rs  rules_settings_scene.rs
common/: Cargo.toml
common/src/: lib.rs
eb-crownfall-engine/: Cargo.toml
eb-crownfall-engine/examples/: bench.rs  crown_behavior.rs  simulate.rs
eb-crownfall-engine/src/: ai.rs  errors.rs  hash.rs  impls.rs  lib.rs  tables.rs
eb-crownfall-engine/tests/: capture_removal.rs  rules.rs  variants.rs
game/: Cargo.toml
game/examples/: simulate.rs
game/src/: ai.rs  errors.rs  hash.rs  impls.rs  lib.rs  tables.rs
game/tests/: capture_removal.rs
networking/: Cargo.toml
networking/src/: client.rs  error.rs  framed.rs  lib.rs  models.rs  packet.rs  server.rs
server/: Cargo.toml
server/src/: game_server.rs  main.rs  models.rs  timing.rs
