[workspace]
resolver = "3"
members = [
    "client",
    "game",
    "server"
]


[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Emma Britton <emmabritton@pm.me>"]
description = "Simple board game"
license-file = "LICENSE"
repository = "https://github.com/emmabritton/crownfall"
readme = "README.md"
keywords = ["games", "pixels", "retro"]
categories = ["games"]
publish = false

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
pixels-graphics-lib = { version = "0.22" , features = ["serde", "window_prefs", "scenes"]}
axum = "0.8"
tokio = { version = "1.52" , features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false