[workspace]
resolver = "3"
members = [
    "client",
    "networking",
    "eb-crownfall-engine",
    "server"
]


[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Emma Britton <emmabritton@pm.me>"]
description = "Simple board game"
license-file = "LICENSE"
repository = "https://github.com/emmabritton/crownfall"
readme = "README.md"
keywords = ["games", "pixels", "retro"]
categories = ["games"]
publish = false

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
pixels-graphics-lib = { version = "0.22.2" , features = ["serde", "window_prefs", "scenes"]}
serde-big-array = "0.5"
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.23", features = ["v4"] }
reqwest = { version = "0.13", features = ["blocking", "json"] }
chrono = { version = "0.4", features = ["serde"] }
local-ip-address = "0.6"
serde_json = "1.0"
clap = { version = "4.6", features = ["derive"] }

[profile.dev]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
