[package]
name = "client"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
game = {path = "../game", features = ["log"]}
networking = {path = "../networking"}
anyhow.workspace = true
pixels-graphics-lib.workspace = true
reqwest.workspace = true
chrono.workspace = true
env_logger = "0.11"