[package]
name = "client"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
eb-crownfall-engine = {path = "../eb-crownfall-engine", features = ["log" , "serde"]}
networking = {path = "../networking"}
anyhow.workspace = true
pixels-graphics-lib.workspace = true
chrono.workspace = true
env_logger = "0.11"
log = "0.4.33"