[package]
name = "networking"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
game = {path = "../game"}
serde.workspace = true
chrono.workspace = true
local-ip-address.workspace = true
serde_json.workspace = true
thiserror.workspace = true