[package]
name = "networking"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
eb-crownfall-engine = {path = "../eb-crownfall-engine", features = ["log" , "serde"]}
serde.workspace = true
chrono.workspace = true
local-ip-address.workspace = true
serde_json.workspace = true
thiserror.workspace = true