[package]
name = "server"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
game = {path = "../game"}
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true