[package]
name = "server"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
eb-crownfall-engine = {path = "../eb-crownfall-engine", features = ["log" , "serde"]}
networking = {path = "../networking"}
uuid.workspace = true
chrono.workspace = true
env_logger = "0.11"